# backend-01

./: pyproject.toml
clientes/: admin.py  models.py  serializers.py  views.py
clientes/migrations/: 0001_initial.py  0002_pedidos.py  0003_pedido_rename_clientes_cliente_itensproduto_and_more.py  0004_remove_itensproduto_cliente_remove_pedido_cliente_and_more.py
config/: settings.py  urls.py
